<resources>
    <string name="app_name">user</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pramod Kumar</string>
    <string name="nav_header_subtitle">Pramodkumarp6@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="google_maps_key">AIzaSyCsXwChJiMtdWfz74-XJZjmAJhgcCOm1tE</string>

    <string name="large_text">"Material is the metaphor.\n\n"

        "\nA material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet no. "
        "technologically advanced and open to imagination and magic.\n\n"

        "Surfaces and edges of the material provide visual cues that are grounded in reality. there "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the is a"
        "flexibility of the material creates new affordances that supercede those in the physical.\n\n "

        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows is "
        "seams, divides space, and indicates moving parts.\n\n"
</string>


    <string name="large_text1">"Material is the metaphor.\n\n"

        "\nA material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet no. "
        "technologically advanced and open to imagination and magic.\n\n"

        "\nSurfaces and edges of the material provide visual cues that are grounded in reality. there "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the is a"
        "flexibility of the material creates new affordances that supercede those in the physical.\n\n "

        "World, without breaking the rules of physics.\n\n"
        "\nThe fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows is "
        "seams, divides space, and indicates moving parts.\n\n"


        "World, without breaking the rules of physics.\n\n"
        "\nThe fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows is "
        "seams, divides space, and indicates moving parts.\n\n"


        "World, without breaking the rules of physics.\n\n"
        "\nThe fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows is "
        "seams, divides space, and indicates moving parts.\n\n"
</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">CONDIDATE</string>
    <string name="hint_email">EMAIL ID</string>
    <string name="company_address">COMPANY</string>


    <string name="job">JOB PROFILE</string>
    <string name="beneficiaryaddress">Time</string>
    <string name="beneficiarycountry">ADDRESS</string>
    <string name="interviewdatail">INTERVIEW DATE </string>

    <string name="contarct_mobile">CON.MOB</string>

    <string name="contract_person">CON.NAME</string>
    <string name="text_style">bold </string>


    <!---  textsize-->


    <string name="textscreen">18sp </string>
    <string name="uploadImages">Set image </string>>

</resources>
