<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    card_view:cardCornerRadius="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"

                android:text="@string/hint_name"
                android:padding="@dimen/text_padding"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="@dimen/text_size"
                android:textColor="#000" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/text_padding"

                android:layout_marginTop="@dimen/layout_margin_top"

                android:text="@string/hint_name"

                android:textSize="@dimen/text_size"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/hint_email"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:textColor="#000" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/hint_email"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/text_padding"
                android:textColor="#000" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/beneficiarycountry"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:textColor="#000" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/beneficiarycountry"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:textColor="#000" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/company_address"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:textColor="#000" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/text_padding"
                android:text="@string/company_address"
                android:textColor="#000" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/job"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/text_padding"
                android:textColor="#000" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/job"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/text_padding"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/interviewdatail"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/text_padding"
                android:textColor="#000" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/intervie_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/interviewdatail"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:textColor="#000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/contract_person"
                android:padding="@dimen/text_padding"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="@dimen/text_size"
                android:textColor="#000" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/contract_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/contract_person"

                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"

                android:textSize="@dimen/text_size"
                android:text="@string/contarct_mobile"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/text_padding"
                android:textColor="#000" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/contract_mob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:layout_weight="1"
                android:padding="@dimen/text_padding"
                android:text="@string/contarct_mobile"
                android:textColor="#000"


                android:textSize="@dimen/text_size" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>